Tweaked spacing on issues list. Added milestone filter.

--- a/IssueTracker.Web/CSS/Issues.less
+++ b/IssueTracker.Web/CSS/Issues.less
@@ -18,27 +18,26 @@
 	div.data-container { float:left; width:100%;
 		@filter-width:250px;
 		>div.issues-container { float:left; width:100%; min-height:1px; font-size:1em; padding-right:@filter-width+@spacing; position:relative; .border-box;
-			>div.tile { float:left; width:100%; padding:0;
-				>div.data {
-					>a { border-top:solid 1px @border-colour; cursor:pointer; height:67px; display:block; color:@primary-font-colour;
-						>div { float:left; width:100%; height:100%; display:table; table-layout:fixed;
-							>div { display:table-cell; height:100%; white-space:nowrap; }
-							>div.priority { padding:0; width:8px; }
-							>div.priority.low { background-color:@low-priority-background; }
-							>div.priority.medium { background-color:@medium-priority-background; }
-							>div.priority.high { background-color:@high-priority-background; }
-							>div.priority.critical { background-color:@critical-priority-background; }
-							>div.name { padding:@small-spacing;
-								>.name { float:left; width:100%; font-weight:bold; color:black; margin-bottom:4px; padding-left:@small-spacing; .ellipsis; }
-								>span.info { float:left; width:100%; color:@primary-font-colour-light; padding-left:@small-spacing; white-space:nowrap; overflow:hidden; font-size:1em; .ellipsis; }
-								>span.info b { color:@primary-font-colour-dark; font-weight:normal; }
-							}
-							>div.status { width:200px; text-align:right; vertical-align:middle; height:100%; line-height:67px; .border-box; padding:0 @spacing; }
+			>div.data {
+				@issue-height:81px;
+				>a { float:left; width:100%; cursor:pointer; height:@issue-height; padding:0; display:block; color:@primary-font-colour; margin-top:@spacing;
+					>div { float:left; width:100%; height:100%; display:table; table-layout:fixed;
+						>div { display:table-cell; height:100%; white-space:nowrap; }
+						>div.priority { padding:0; width:@small-spacing; }
+						>div.priority.low { background-color:@low-priority-background; }
+						>div.priority.medium { background-color:@medium-priority-background; }
+						>div.priority.high { background-color:@high-priority-background; }
+						>div.priority.critical { background-color:@critical-priority-background; }
+						>div.name { padding:@spacing;
+							>.name { float:left; width:100%; font-weight:bold; color:black; margin-bottom:4px; padding-left:@small-spacing; .ellipsis; }
+							>span.info { float:left; width:100%; color:@primary-font-colour-light; padding-left:@small-spacing; white-space:nowrap; overflow:hidden; font-size:1em; .ellipsis; }
+							>span.info b { color:@primary-font-colour-dark; font-weight:normal; }
 						}
+						>div.status { width:200px; text-align:right; vertical-align:middle; height:100%; line-height:@issue-height; .border-box; padding:0 @spacing; }
 					}
-					>a:first-child { border-top:none; }
-					>a:hover { background-color:@hover-colour; }
 				}
+				>a:first-child { margin-top:0; }
+				>a:hover { background-color:@hover-colour; }
 			}
 			>div.loading { float:left; width:100%; text-align:center; padding:@spacing; .border-box;
 				>img { margin:auto; width:30px; height:30px; }
@@ -62,8 +61,8 @@
 				>div.tile { float:left; width:100%; margin-top:@spacing;
 					@height:19px;
 					@local-spacing:@spacing;
-					>h2 { float:left; width:100%; padding:@small-spacing @local-spacing; }
-					>div { float:left; width:100%; padding:@small-spacing @local-spacing; border-top:solid 1px @border-colour; .border-box; cursor:pointer;
+					>h2 { float:left; width:100%; padding:@small-spacing local-spacing; }
+					>div { float:left; width:100%; padding:@local-spacing; border-top:solid 1px @border-colour; .border-box; cursor:pointer;
 						>* { height:@height; line-height:@height; display:inline-block; vertical-align:middle; }
 						>span { float:left; }
 						>i { float:right; display:none; }
